Added styling and game page

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title>TIN-Dare</title>
     <script defer src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
-    <h1>tinDARE</h1>
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     
 </head>
 <body>
-    <p id="Game Instruction">
-        How to play: Whoever has used their tinder app last goes first. 
-        You will get to choose to either do a truth, dare, or let the computer choose which one.
-        Complete the tasks and reach 10 points first to win!
-    </p>
+    <h1>tinDARE</h1>
 
-    <button id="start"> Happy Swiping!</button>
+    <main>
+        <ul id="instruction">
+            <h2>How to play:</h2>
+            <li> Whoever used their tinder app last goes first </li> 
+            <li>You can choose to do a truth, dare, or let the computer choose for you</li>
+            <li>Truth and Dare options are worth 1 point. The random option is worth 2 points</li>
+            <li>Complete the tasks and reach 10 points first to win!</li>
+        </ul>
+    </main>
+    <a href="game-page.html"><button id="start"> Happy Swiping!</button></a>
 </body>
 </html>
