modal box made and designed

--- a/game-page.html
+++ b/game-page.html
@@ -14,13 +14,25 @@
     <h1>tinDARE</h1>
     <main id="game">
         <h2>Let's Get Swiping!</h2>
-                <p id="player1">Player 1</p>
-                <p id="player2">Player 2</p>
-            <ul class="choices">
-                <button id="t" >Truth</button>
-                <button id="d" >Dare</button>
-                <button id="r" >Random</button>
-            </ul>
+                    <p id="player1">Player 1</p>
+                    <p id="player2">Player 2</p>
+
+                 <ul class="choices">
+                    <button id="t">Truth</button>
+                    <button id="d">Dare</button>
+                    <button id="r">Random</button>   
+                </ul> 
+
+            <div id="myModal" class="modal">
+               <div class="modal-content">
+                   <button id="did">DID IT!</button>
+                   <button id="nope">NOPE!</button>
+
+                   <p class="message"></p>
+               
+                </div>
+            </div>
+
     </main>
 </body>
 </html>
