--- a/game-page.html
+++ b/game-page.html
@@ -28,7 +28,7 @@
                    <button id="did">DID IT!</button>
                    <button id="nope">NOPE!</button>
 
-                   <p class="message"></p>
+                   <p id="message"></p>
                
                 </div>
             </div>
