--- a/game-page.html
+++ b/game-page.html
@@ -13,7 +13,7 @@
 <body>
     <h1>tinDARE</h1>
     <main id="game">
-        <h2>Let's Get Swiping!</h2>
+        <h2 id="head">Let's Get Swiping!</h2>
             <div class="score-board">
                 <label id="player1"></label>
                 <label id="player2"></label>
@@ -23,12 +23,12 @@
                 <button id="t">Truth</button>
                 <button id="d">Dare</button>
                 <button id="r">Challenge</button>   
-            </ul> 
+            </div> 
 
             <div id="myModal" class="modal">
                <div class="modal-content">
                    <p id="message"></p>
-                   <button id="did">DID IT!</button>
+                   <button id="did">LIKE!</button>
                    <button id="nope">NOPE!</button>
 
                
@@ -37,7 +37,7 @@
 
             <div id="myRModal" class="rModal">
                 <div class="r-modal-content">
-                    <h2 id="challenge">CHALLENGE:</h2>
+                    <h2>CHALLENGE:</h2>
                     <p id="rMessage"></p>
                     <button id="rDid">DID IT!</button>
                     <button id="rNope">NOPE!</button>
