--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>How to play:</h2>
             <li> Whoever used their tinder app last goes first </li> 
             <li>You can choose to do a truth, dare, or let the computer choose for you</li>
-            <li>Truth and Dare options are worth 1 point. The random option is worth 2 points</li>
+            <li>Truth and Dare options are worth 1 point. The challenge option is worth 2 points</li>
             <li>Complete the tasks and reach 10 points first to win!</li>
         </ul>
     </main>
