--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <ul id="instruction">
             <h2>How to play:</h2>
             <li> Whoever used their tinder app last goes first </li> 
-            <li>You can choose to do a truth, dare, or let the computer choose for you</li>
-            <li>Truth and Dare options are worth 1 point. The challenge option is worth 2 points</li>
-            <li>Complete the tasks and reach 10 points first to win!</li>
+            <li>You can choose one of the three options: Truth, Dare or Challenge</li>
+            <li>Truth and Dare options are worth 1 point. The Challenge option is worth 2 points</li>
+            <li>The first player to reach 10 points wins!</li>
         </ul>
     </main>
     <a href="game-page.html"><button id="start"> Happy Swiping!</button></a>
