Last updated commit

--- a/game-page.html
+++ b/game-page.html
@@ -42,5 +42,13 @@
                  </div>
              </div>
     </main>
+    <div class="bottomButtons">
+
+        <a href="index.html"><button id="home">Home</button></a>
+        <a href="game-page.html"><button id="resetGame">New Game</button></a>
+    </div>
 </body>
+<footer>
+    <p>Made by <a href="https://www.linkedin.com/in/daniel-francisco-529181146/">Daniel Francisco</a> &copy;</p>
+</footer>
 </html>
