--- a/index.html
+++ b/index.html
@@ -24,4 +24,8 @@
     </main>
     <a href="game-page.html"><button id="start"> Happy Swiping!</button></a>
 </body>
+<footer>
+    <p>Made by <a href="https://www.linkedin.com/in/daniel-francisco-529181146/">Daniel Francisco</a> &copy;</p>
+
+</footer>
 </html>
