--- a/game-page.html
+++ b/game-page.html
@@ -28,7 +28,7 @@
             <div id="myModal" class="modal">
                <div class="modal-content">
                     <p id="message"></p>
-                    <button id="did">LIKE!</button>
+                    <button id="did" class="slide-out-right">LIKE!</button>
                     <button id="nope">NOPE!</button>
                </div>
             </div>
